try to deploy 5

--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-mongo_url='mongodb://localhost/MyProjectDB'
+mongo_url='mongodb://nguyen:nguyen1@ds149616.mlab.com:49616/heroku_6qmfpt29'
 secret_key='qwerty'
