--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 mongo_url='mongodb://nguyen:nguyen1@ds149616.mlab.com:49616/heroku_6qmfpt29'
+CLOUDMQTT_URL='mqtt://ghezlilg:GfjOW69dJcy2@m14.cloudmqtt.com:17781'
 secret_key='qwerty'
