--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,11 +3,16 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@fullcalendar/core": "^4.1.0",
+    "@fullcalendar/daygrid": "^4.1.0",
+    "@fullcalendar/interaction": "^4.1.0",
+    "@fullcalendar/react": "^4.1.0",
     "axios": "^0.18.0",
     "bootstrap": "^4.3.1",
     "nodemon": "^1.18.10",
     "prop-types": "^15.7.2",
     "react": "^16.8.4",
+    "react-currency-input": "^1.3.6",
     "react-dom": "^16.8.4",
     "react-redux": "^6.0.1",
     "react-router-dom": "^5.0.0",
