--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "react-redux": "^6.0.1",
     "react-router-dom": "^5.0.0",
     "react-scripts": "2.1.8",
+    "react-time-picker": "^3.5.2",
     "react-transition-group": "^2.6.1",
     "reactstrap": "^7.1.0",
     "recharts": "^1.5.0",
